--- a/principal.html
+++ b/principal.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo de la empresa" class="logo">
+        <img src="img/logo.png" alt="Logo de la empresa" class="logo">
         <h1>Bienvenidos a nuestra pagina principal</h1>
     </header>
     <nav>
@@ -37,11 +37,11 @@
                 Aqui puedes encontrar informacion sobre nuestra empresa y registrarte para recibir nuestras novedades
             </p>
         </div>
-        <img src="imagen.jpg" alt="Imagen de producto" class="imagen-producto">
+        <img src="img/imagen.jpg" alt="Imagen de producto" class="imagen-producto">
     </section>
     <footer>
         <div class="footer-content">
-            &copy; 2024 Soluciona Inc. Todos los derechos reservados.
+            &copy; 2024 Soluteca Inc. Todos los derechos reservados.
         </div>
     </footer>    
 </body>
